--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.min.css" rel="stylesheet">
-
+  
+  <!-- academicons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+  
 <style>
   
   svg {
@@ -77,7 +80,7 @@ header .overlay {
 
 @media (pointer: coarse) and (hover: none) {
   header {
-    background: url('https://github.com/insectconservation/insectconservation.github.io/blob/master/img/background.png') black no-repeat center center scroll;
+    background: url('https://github.com/reviewdata/reviewdata.github.io/img/typing.png') black no-repeat center center scroll;
   }
   header video {
     display: none;
@@ -92,9 +95,9 @@ header .overlay {
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Home</a>
       <a class="navbar-brand" href="#about">About</a>
       <a class="navbar-brand" href="#methods">Methods</a>
+      <a class="navbar-brand" href="#team">Team</a>
       <a class="navbar-brand" href="#contact">Contact</a>
     </div>
   </nav>
@@ -116,63 +119,38 @@ header .overlay {
 </header>
 
   <!-- Icons Grid -->
-  <section class="features-icons bg-light text-center">
+  <section class="features-icons bg-light text-left" id=about>
     <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
-            </div>
-            <h3>Fully Responsive</h3>
-            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
-            </div>
-            <h3>Bootstrap 4 Ready</h3>
-            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
-            </div>
-            <h3>Easy to Use</h3>
-            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
-          </div>
-        </div>
-      </div>
+        <p class="lead mb-0"><b><a href="https://www.cochrane.org/news/what-are-systematic-reviews" target='_blank'>Systematic reviews</a> are complex, laborious tasks that produce vast amounts of data</b>. However, the effort required to produce these data are typically lost once a review is completed: some information is reported in the review, but often information is missing or specific details are lacking.</p><br>
+        <p class="lead mb-0">Even in excellent systematic reviews, <b>data are rarely reported in formats and file types that are easily understood</b> and can be reused or repurposed for future projects, like systematic review updates or overlapping analyses. Instead, much of the review work must be repeated.</p><br>
+        <p class="lead mb-0">Imagine the way you backup your mobile phone and transfer your files and settings to a new handset: if systematic reviews were accompanied by a set of standardised file types describing the methods, activities and outputs, <b>reviews could easily be updated, verified and adapted by machines</b>.</p><br>
+        <p class="lead mb-0">We recognise the wasted effort that could be saved here, and we are conducting a project to <b>establish a set of minimum standards, file types and formats that will help to ensure that systematic reviews are as transparent and <i>interoperable</i> as possible</b> (meaning that their data can be easily reused and adapted for other purposes).</p>
     </div>
   </section>
 
   <!-- Image Showcases -->
-  <section class="showcase">
+  <section class="showcase" id=methods>
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+          <h2>Stakeholder-led process</h2>
+          <p class="lead mb-0">Our methods involve carefully planned stakeholder engagement and will be driven by the needs of experts, end-users and software developers to ensure they are as relevant and usable as possible.</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+          <h2>Delphi-style method</h2>
+          <p class="lead mb-0">We will use an anoymised approach (known as the Delphi method) to solicit suggestions of necessary information, required file types and data formats, followed by a collaborative, online workshop with a core group of stakeholders.</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy to Use &amp; Customize</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+          <h2>Validated with real reviews</h2>
+          <p class="lead mb-0">We will use a set of completed systematic reviews to test, validate and refine the standards to ensure they are operationalisable (usable in practice).</p>
         </div>
       </div>
     </div>
@@ -181,96 +159,67 @@ header .overlay {
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
     <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+      <h2 class="mb-5">Learn more</h2>
+        <p>Find out more detail about the project by reading the <a href="" target="_blank">protocol on the Open Science Framework</a>.</p>
+    </div>
+  </section>
+  
+    <!-- Testimonials -->
+  <section class="testimonials text-center bg-light" id=team>
+    <div class="container">
+      <h2 class="mb-5">The coordinating team</h2>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <a href="https://www.sei.org/people/neal-haddaway/" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/nrh.jpg" alt="">
+              <h5>Neal R Haddaway</h5></a>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+          <div class="col-lg-4">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <a href="https://www.sydney.edu.au/medicine-health/about/our-people/academic-staff/adam-dunn.html" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/ad.jpg" alt="">
+              <h5>Adam Dunn</h5></a>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+          <div class="col-lg-4">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <a href="https://www.bees.unsw.edu.au/our-people/shinichi-nakagawa" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/sn.jpg" alt="">
+              <h5>Shinichi Nakagawa</h5></a>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Call to Action -->
-  <section class="call-to-action text-white text-center">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
-        </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Footer -->
-  <footer class="footer bg-light">
+  <footer class="footer bg-light" id=contact>
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="#">About</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-          </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2020. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Neal Haddaway 2020. Produced using a <a href="https://startbootstrap.com/themes/landing-page/" target="_blank">Start Boostrap theme</a>.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-facebook fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+            <li class="list-inline-item">
+              <a href="https://www.twitter.com/nealhaddaway" target="_blank">
+                <i class="fab fa-twitter-square fa-3x fa-fw"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              <a href="https://github.com/reviewdata/reviewdata.github.io" target="_blank">
+                <i class="fab fa-github-square fa-3x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.eshackathon.org/" target="_blank">
+                <i class="ai ai-osf ai-3x ai-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="mailto:neal.haddaway@sei.org" target="_blank">
+                <i class="fas fa-envelope fa-3x fa-fw"></i>
               </a>
             </li>
           </ul>
