--- a/index.html
+++ b/index.html
@@ -132,26 +132,28 @@ header .overlay {
   <section class="showcase" id=methods>
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+        <div class="col-lg-4 order-lg-3 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-4 order-lg-2 my-auto showcase-text">
           <h2>Stakeholder-led process</h2>
-          <p class="lead mb-0">Our methods involve carefully planned stakeholder engagement and will be driven by the needs of experts, end-users and software developers to ensure they are as relevant and usable as possible.</p>
+          <p class="lead mb-0">Our methods involve carefully planned stakeholder engagement and will be driven by the needs of experts, end-users and software developers to ensure they are as relevant and usable as possible. The project has been <a href="https://www.equator-network.org/library/reporting-guidelines-under-development/reporting-guidelines-under-development-for-systematic-reviews/" target="_blank">registered with the EQUATOR Network</a>.</p>
         </div>
+        <div class="col-lg-2 order-lg-1 text-white showcase-img"></div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
+        <div class="col-lg-2 text-white showcase-img"></div>
+        <div class="col-lg-4 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-4 my-auto showcase-text">
           <h2>Delphi-style method</h2>
           <p class="lead mb-0">We will use an anoymised approach (known as the Delphi method) to solicit suggestions of necessary information, required file types and data formats, followed by a collaborative, online workshop with a core group of stakeholders.</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+        <div class="col-lg-4 order-lg-3 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-4 order-lg-2 my-auto showcase-text">
           <h2>Validated with real reviews</h2>
           <p class="lead mb-0">We will use a set of completed systematic reviews to test, validate and refine the standards to ensure they are operationalisable (usable in practice).</p>
         </div>
+        <div class="col-lg-2 order-lg-1 text-white showcase-img"></div>
       </div>
     </div>
   </section>
@@ -160,7 +162,15 @@ header .overlay {
   <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">Learn more</h2>
-        <p>Find out more detail about the project by reading the <a href="" target="_blank">protocol on the Open Science Framework</a>.</p>
+        <p>Find out more detail about the project by reading the <a href="https://osf.io/4e9yg/" target="_blank">protocol on the Open Science Framework</a>.</p>
+        <br>
+        <a href="https://www.eshackathon.org/" target="_blank">
+                <i class="ai ai-osf ai-3x ai-fw"></i>
+              </a>
+              <br>
+        <br>
+        <br>
+        <hr>
     </div>
   </section>
   
@@ -188,17 +198,32 @@ header .overlay {
             </div>
           </div>
         </div>
+        <br>
+        <br>
+        <hr>
       </div>
-    </div>
   </section>
 
 
   <!-- Footer -->
-  <footer class="footer bg-light" id=contact>
+  <footer class="testimonials text-center bg-light"  id=contact>
     <div class="container">
+      <h2 class="mb-5">Contact us</h2>
+      <p>To find out more about the project, and to get involved, please email <a href="mailto:neal.haddaway@sei.org">neal.haddaway@sei.org</a>.</p>
+      <br>
+      <a href="mailto:neal.haddaway@sei.org" target="_blank">
+                <i class="fas fa-envelope fa-3x fa-fw"></i>
+              </a>
+              <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <hr>
       <div class="row">
+        
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Neal Haddaway 2020. Produced using a <a href="https://startbootstrap.com/themes/landing-page/" target="_blank">Start Boostrap theme</a>.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Neal Haddaway 2021.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
@@ -217,11 +242,6 @@ header .overlay {
                 <i class="ai ai-osf ai-3x ai-fw"></i>
               </a>
             </li>
-            <li class="list-inline-item">
-              <a href="mailto:neal.haddaway@sei.org" target="_blank">
-                <i class="fas fa-envelope fa-3x fa-fw"></i>
-              </a>
-            </li>
           </ul>
         </div>
       </div>
@@ -231,6 +251,15 @@ header .overlay {
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  
+  <script>
+    $('.test, .nav-link, .navbar-brand, .new-button').click(function() {
+    var sectionTo = $(this).attr('href');
+    $('html, body').animate({
+      scrollTop: $(sectionTo).offset().top
+    }, 500);
+});
+  </script>
 
 </body>
 
