--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ header .overlay {
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <a href="https://www.sydney.edu.au/medicine-health/about/our-people/academic-staff/adam-dunn.html" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/ad.jpg" alt="">
+              <a href="https://www.sydney.edu.au/medicine-health/about/our-people/academic-staff/adam-dunn.html" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/ad.jpeg" alt="">
               <h5>Adam Dunn</h5></a>
             </div>
           </div>
