--- a/form.html
+++ b/form.html
@@ -95,10 +95,7 @@ header .overlay {
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#about">About</a>
-      <a class="navbar-brand" href="#methods">Methods</a>
-      <a class="navbar-brand" href="#team">Team</a>
-      <a class="navbar-brand" href="#contact">Contact</a>
+      <a class="navbar-brand" href="index.html">Home</a>
     </div>
   </nav>
 
