--- a/index.html
+++ b/index.html
@@ -181,19 +181,19 @@ header .overlay {
         <div class="row">
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <a href="https://www.sei.org/people/neal-haddaway/" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/nrh.jpg" alt="">
+              <a href="https://www.sei.org/people/neal-haddaway/" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/nh1.jpg" alt="">
               <h5>Neal R Haddaway</h5></a>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <a href="https://www.bees.unsw.edu.au/our-people/shinichi-nakagawa" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/sn.jpg" alt="">
+              <a href="https://www.bees.unsw.edu.au/our-people/shinichi-nakagawa" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/sn1.jpg" alt="">
               <h5>Shinichi Nakagawa</h5></a>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <a href="https://www.sydney.edu.au/medicine-health/about/our-people/academic-staff/adam-dunn.html" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/ad.jpg" alt="">
+              <a href="https://www.sydney.edu.au/medicine-health/about/our-people/academic-staff/adam-dunn.html" target="_blank"><img class="img-fluid rounded-circle mb-3" src="img/ad1.jpg" alt="">
               <h5>Adam Dunn</h5></a>
             </div>
           </div>
