--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Standardised data files for systematic reviews</title>
+  <title>Standardised data files for systematic reviews - submission form</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -86,6 +86,12 @@ header .overlay {
     display: none;
   }
 }
+
+#googleForm {
+  /*margin-left: auto;/*
+  /*margin-right: auto;*/
+  text-align: center;
+}
   </style>
 
 </head>
@@ -95,7 +101,6 @@ header .overlay {
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Home</a>
     </div>
   </nav>
 
@@ -109,7 +114,7 @@ header .overlay {
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
         <h1 class="display-3"><b>Standardised data files for systematic reviews</b></h1><br>
-        <p class="lead mb-0"><b>A project to improve the transparency and interoperability of systematic reviews</b></p>
+        <p class="lead mb-0"><b>Your views on standardised systematic review data formats</b></p>
       </div>
     </div>
   </div>
@@ -118,41 +123,35 @@ header .overlay {
   <!-- Icons Grid -->
   <section class="features-icons bg-light text-left" id=about>
     <div class="container">
-        <p class="lead mb-0"><b><a href="https://www.cochrane.org/news/what-are-systematic-reviews" target='_blank'>Systematic reviews</a> are complex, laborious tasks that produce vast amounts of data</b>. However, the effort required to produce these data are typically lost once a review is completed: some information is reported in the review, but often information is missing or specific details are lacking.</p><br>
+        <p class="lead mb-0">Many thanks for agreeing to contribute to this project - your inputs are greatly appreciated!</p><br>
         <p class="lead mb-0">Even in excellent systematic reviews, <b>data are rarely reported in formats and file types that are easily understood</b> and can be reused or repurposed for future projects, like systematic review updates or overlapping analyses. Instead, much of the review work must be repeated.</p><br>
         <p class="lead mb-0">Imagine the way you backup your mobile phone and transfer your files and settings to a new handset: if systematic reviews were accompanied by a set of standardised file types describing the methods, activities and outputs, <b>reviews could easily be updated, verified and adapted by machines</b>.</p><br>
         <p class="lead mb-0">We recognise the wasted effort that could be saved here, and we are conducting a project to <b>establish a set of minimum standards, file types and formats that will help to ensure that systematic reviews are as transparent and <i>interoperable</i> as possible</b> (meaning that their data can be easily reused and adapted for other purposes).</p>
+        <br>
+        <hr>
+        <p class="lead mb-0">Our aim is to bring together systematic review methods experts from across all fields of research to propose a standard for describing the data associated with a systematic review (representing their design and results) in structured and computable ways.</p><br>
+        <p class="lead mb-0">Here are some important definitions/explanations:</p><br>
+          <ol class="lead mb-0">
+            <li><b>Data</b> - here, we mean ALL information that describes a systematic review, in terms of its scope, methods and results. This includes descriptive information ('meta-data') about a systematic review's key elements (e.g. PICO) and methodology (e.g. databases searched), information and data regarding the evidence found (e.g. PRISMA flow diagram data, critical appraisal judgements), and descriptive information and study findings extracted from all studies.</li>
+            <li><b>Disciplinary relevance</b> - this project is aimed at establishing ideal standards across disciplines that can be applied in any sector. There is therefore a need to remain general whilst still being as practical as possible. We are doing this to make it easier to adopt across research because we feel strongly that systematic review methods are adaptable frameworks that lend themselves well to any research discipline.
+            <li><b>Ideal standards</b> - we are not aiming to immediately bring in compulsory reporting of every detail. What we are aiming for is a standard that we can work towards.</li>
+            <li><b>Format</b> - working towards this standard is working towards a goal that we believe strongly will help improve the rigour, efficiency, adoption and impact of evidence synthesis: full digitisation of all data linked to a systematic review. We believe that by providing all details about a review (in terms of what what done, what was found, and what were the findings) will reduce research waste and increase efficiency and responsiveness of evidence synthesis by sharing of effort across related or overlapping reviews, and facilitating updating and upgrading of syntheses.</li>
+            <li><b>Guiding principles</b> - this work is guided by the principles of <a href="https://www.nature.com/articles/sdata201618" target="_blank">FAIR (Findable, Accessible, interoperable, Reusable) data</a> and Open Science (<a href="https://environmentalevidencejournal.biomedcentral.com/articles/10.1186/s13750-018-0140-4" target="_blank">Open Synthesis as it applies to evidence synthesis</a>).</li>
+          </ol><br>
+          <br>
+        <p class="lead mb-0">With these things in mind, our questions for this project are:</p><br>
+        <ul class="lead mb-0">
+          <li><b>WHAT</b> data should authors make public alongside their review manuscripts?</li>
+          <li><b>HOW</b> should these data be provided (in what format)?</li>
+        </ul><br>
+        <br>
+        <p class="lead mb-0"><b>This form has space for <u>up to 5 pairs of responses (WHAT and HOW)</u>, but if you want to provide more, please come back and submit again.</b></p>
+        <hr>
+        <div id="googleForm">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScuds_MFbWM0THottnOEjFVVN4shcIo7I2IbgYEQLMAcQtlBw/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          </div>
     </div>
-  </section>
-
-  <!-- Image Showcases -->
-  <section class="showcase" id=methods>
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <div class="col-lg-4 order-lg-3 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
-        <div class="col-lg-4 order-lg-2 my-auto showcase-text">
-          <h2>Stakeholder-led process</h2>
-          <p class="lead mb-0">Our methods involve carefully planned stakeholder engagement and will be driven by the needs of experts, end-users and software developers to ensure they are as relevant and usable as possible. The project has been <a href="https://www.equator-network.org/library/reporting-guidelines-under-development/reporting-guidelines-under-development-for-systematic-reviews/" target="_blank">registered with the EQUATOR Network</a>.</p>
-        </div>
-        <div class="col-lg-2 order-lg-1 text-white showcase-img"></div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-2 text-white showcase-img"></div>
-        <div class="col-lg-4 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-4 my-auto showcase-text">
-          <h2>Delphi-style method</h2>
-          <p class="lead mb-0">We will use an anoymised approach (known as the Delphi method) to solicit suggestions of necessary information, required file types and data formats, followed by a collaborative, online workshop with a core group of stakeholders.</p>
-        </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-4 order-lg-3 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
-        <div class="col-lg-4 order-lg-2 my-auto showcase-text">
-          <h2>Validated with real reviews</h2>
-          <p class="lead mb-0">We will use a set of completed systematic reviews to test, validate and refine the standards to ensure they are operationalisable (usable in practice).</p>
-        </div>
-        <div class="col-lg-2 order-lg-1 text-white showcase-img"></div>
-      </div>
-    </div>
+    <hr>
   </section>
 
   <!-- Testimonials -->
