--- a/form.html
+++ b/form.html
@@ -92,6 +92,13 @@ header .overlay {
   /*margin-right: auto;*/
   text-align: center;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
   </style>
 
 </head>
@@ -145,10 +152,15 @@ header .overlay {
           <li><b>HOW</b> should these data be provided (in what format)?</li>
         </ul><br>
         <br>
-        <p class="lead mb-0"><b>This form has space for <u>up to 5 pairs of responses (WHAT and HOW)</u>, but if you want to provide more, please come back and submit again.</b></p>
+        <p class="lead mb-0">You may find the following schematic showing the systematic review processes useful when thinking about your this:</p><br>
+        <img src="img/srprocess.png" class="center">
+        <br>
+        <br>
+        <br>
+        <p class="lead mb-0"><b>This form has space for <u>up to 5 pairs of responses (WHAT and HOW)</u>, but if you want to provide more, please click <i>'Submit another response'</i>.</b></p>
         <hr>
         <div id="googleForm">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScuds_MFbWM0THottnOEjFVVN4shcIo7I2IbgYEQLMAcQtlBw/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScuds_MFbWM0THottnOEjFVVN4shcIo7I2IbgYEQLMAcQtlBw/viewform?embedded=true" width="640" height="2500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
           </div>
     </div>
     <hr>
