--- a/form.html
+++ b/form.html
@@ -97,7 +97,6 @@ header .overlay {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
 }
   </style>
 
@@ -131,18 +130,29 @@ header .overlay {
   <section class="features-icons bg-light text-left" id=about>
     <div class="container">
         <p class="lead mb-0">Many thanks for agreeing to contribute to this project - your inputs are greatly appreciated!</p><br>
+        <p class="lead mb-0">The following important explanation will take c. 3 minutes to read. Scroll down for the submission form. if you have any questions or comments, please feel free to <a href="#contact">contact us</a>.</p>
+        <br>
+        <hr>
         <p class="lead mb-0">Even in excellent systematic reviews, <b>data are rarely reported in formats and file types that are easily understood</b> and can be reused or repurposed for future projects, like systematic review updates or overlapping analyses. Instead, much of the review work must be repeated.</p><br>
         <p class="lead mb-0">Imagine the way you backup your mobile phone and transfer your files and settings to a new handset: if systematic reviews were accompanied by a set of standardised file types describing the methods, activities and outputs, <b>reviews could easily be updated, verified and adapted by machines</b>.</p><br>
         <p class="lead mb-0">We recognise the wasted effort that could be saved here, and we are conducting a project to <b>establish a set of minimum standards, file types and formats that will help to ensure that systematic reviews are as transparent and <i>interoperable</i> as possible</b> (meaning that their data can be easily reused and adapted for other purposes).</p>
         <br>
         <hr>
         <p class="lead mb-0">Our aim is to bring together systematic review methods experts from across all fields of research to propose a standard for describing the data associated with a systematic review (representing their design and results) in structured and computable ways.</p><br>
+        <br>
+        <p class="lead mb-0">Your suggestions will be collated, consolidated and then fed into an online workshop where items will be discussed and selected for a final list of recommended data types, contents and file formats.</p><br>
+        <img src="img/project.png" width="80%" class="center">
+        <p class="lead mb-0">Acknowledgement and co-authorship opportunities are outlined in the <a href="docs/authorship_policy.pdf" target="_blank">Authorship Policy</a>. All workshop participants must abide by the <a href="docs/code_of_conduct.pdf" target="_blank">Code of Conduct</a>.</p>
+        <br>
+        <p class="lead mb-0">Working towards this standard is working towards a goal that we believe strongly will help improve the rigour, efficiency, adoption and impact of evidence synthesis: full digitisation of all data linked to a systematic review. We believe that by providing all details about a review (in terms of what what done, what was found, and what were the findings) will reduce research waste and increase efficiency and responsiveness of evidence synthesis by sharing of effort across related or overlapping reviews, and facilitating updating and upgrading of syntheses.</p>
+        <br>
+        <hr>
         <p class="lead mb-0">Here are some important definitions/explanations:</p><br>
           <ol class="lead mb-0">
             <li><b>Data</b> - here, we mean ALL information that describes a systematic review, in terms of its scope, methods and results. This includes descriptive information ('meta-data') about a systematic review's key elements (e.g. PICO) and methodology (e.g. databases searched), information and data regarding the evidence found (e.g. PRISMA flow diagram data, critical appraisal judgements), and descriptive information and study findings extracted from all studies.</li>
             <li><b>Disciplinary relevance</b> - this project is aimed at establishing ideal standards across disciplines that can be applied in any sector. There is therefore a need to remain general whilst still being as practical as possible. We are doing this to make it easier to adopt across research because we feel strongly that systematic review methods are adaptable frameworks that lend themselves well to any research discipline.
             <li><b>Ideal standards</b> - we are not aiming to immediately bring in compulsory reporting of every detail. What we are aiming for is a standard that we can work towards.</li>
-            <li><b>Format</b> - working towards this standard is working towards a goal that we believe strongly will help improve the rigour, efficiency, adoption and impact of evidence synthesis: full digitisation of all data linked to a systematic review. We believe that by providing all details about a review (in terms of what what done, what was found, and what were the findings) will reduce research waste and increase efficiency and responsiveness of evidence synthesis by sharing of effort across related or overlapping reviews, and facilitating updating and upgrading of syntheses.</li>
+            <li><b>Format</b> - we are not just interested in the file format (e.g. 'CSV') - we're interested in how the contents should be provided so that they are easily understandable, machine-readable, and reusable.</li>
             <li><b>Guiding principles</b> - this work is guided by the principles of <a href="https://www.nature.com/articles/sdata201618" target="_blank">FAIR (Findable, Accessible, interoperable, Reusable) data</a> and Open Science (<a href="https://environmentalevidencejournal.biomedcentral.com/articles/10.1186/s13750-018-0140-4" target="_blank">Open Synthesis as it applies to evidence synthesis</a>).</li>
           </ol><br>
           <br>
@@ -153,7 +163,7 @@ header .overlay {
         </ul><br>
         <br>
         <p class="lead mb-0">You may find the following schematic showing the systematic review processes useful when thinking about your this:</p><br>
-        <img src="img/srprocess.png" class="center">
+        <img src="img/srprocess.png" class="center" width="50%">
         <br>
         <br>
         <br>
@@ -171,11 +181,11 @@ header .overlay {
     <div class="container">
       <h2 class="mb-5">Learn more</h2>
         <p>Find out more detail about the project by reading the <a href="https://osf.io/4e9yg/" target="_blank">protocol on the Open Science Framework</a>.</p>
+        <a href="https://osf.io/4e9yg/" target="_blank"><i class="ai ai-osf ai-3x ai-fw"></i></a>
         <br>
-        <a href="https://www.eshackathon.org/" target="_blank">
-                <i class="ai ai-osf ai-3x ai-fw"></i>
-              </a>
-              <br>
+        <br>
+        <p><a href="docs/code_of_conduct.pdf" target="_blank">Read the project's Code of Conduct</a></p>
+        <p><a href="docs/authorship_policy.pdf" target="_blank">Read the Authorship policy</a></p>
         <br>
         <br>
         <hr>
